add repoclosure job for centos-8 master in rdo
Change-Id: I714c4cce74fee769d647699b5f0f57de36e7b84f

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -213,6 +213,23 @@
       release: master
 
 - job:
+    name: periodic-tripleo-ci-centos-8-standalone-master-repoclosure
+    parent: tripleo-ci-base-standalone-periodic-centos-8
+    vars:
+      featureset: '052'
+      release: master
+      repoclosure: true
+
+- job:
+    name: tripleo-ci-centos-8-standalone-master-repoclosure
+    parent: tripleo-ci-centos-8-standalone
+    vars:
+      featureset: '052'
+      release: master
+      repoclosure: true
+
+
+- job:
     name: periodic-tripleo-ci-centos-8-standalone-full-tempest-master
     parent: periodic-tripleo-ci-centos-8-standalone-master
     timeout: 14400
