Switch to Xena tags
master release is being switched to wallaby
in rdoinfo with [1], this patch switches jobs
setting Xena as master.

[1] https://review.rdoproject.org/r/c/rdoinfo/+/33087

Change-Id: Ic4d7fa707f1ce409f604a5d9420c9fd1073b7393

--- a/playbooks/rdoinfo/DLRN-check.yaml
+++ b/playbooks/rdoinfo/DLRN-check.yaml
@@ -68,7 +68,7 @@
 
           export CENTOS_VERS="{{  centos_version | default('centos7') }}"
 
-          CURRENT_MASTER_TAG="wallaby-uc"
+          CURRENT_MASTER_TAG="xena-uc"
 
           PACKAGES_UPDATED_MASTER=""
           PACKAGES_UPDATED_QUEENS=""
@@ -77,6 +77,7 @@
           PACKAGES_UPDATED_TRAIN=""
           PACKAGES_UPDATED_USSURI=""
           PACKAGES_UPDATED_VICTORIA=""
+          PACKAGES_UPDATED_WALLABY=""
 
           TAGS_DIFF=$(rdopkg info-tags-diff .)
 
@@ -85,6 +86,9 @@
               if [ "${CENTOS_VERS}" = "centos8" ]; then
                   if [[ -n $(echo "$line" | grep -w $CURRENT_MASTER_TAG) ]]; then
                       PACKAGES_UPDATED_MASTER="$PACKAGES_UPDATED_MASTER $PKGNAME"
+                  fi
+                  if [[ -n $(echo "$line" | grep -w wallaby) ]]; then
+                      PACKAGES_UPDATED_WALLABY="$PACKAGES_UPDATED_WALLABY $PKGNAME"
                   fi
                   if [[ -n $(echo "$line" | grep -w victoria) ]]; then
                       PACKAGES_UPDATED_VICTORIA="$PACKAGES_UPDATED_VICTORIA $PKGNAME"
@@ -116,6 +120,16 @@
           TIMEOUT="{{ zuul.timeout | default('10800') }}"
           if [ -n "${PACKAGES_UPDATED_MASTER}" ]; then
               timeout --signal=SIGKILL $TIMEOUT  {{ ansible_user_dir }}/rdoinfo-DLRN.sh $CURRENT_MASTER_TAG "${PACKAGES_UPDATED_MASTER}" "${CENTOS_VERS}"
+              ret1=$?
+              if [ $ret1 -ne 0 ]; then
+                  ret=$ret1
+              fi
+              # The data/ contents have been archived already, remove to avoid issues with the next branch
+              rm -rf data
+              sudo rm -rf /var/cache/mock/*
+          fi
+          if [ -n "${PACKAGES_UPDATED_WALLABY}" ]; then
+              timeout --signal=SIGKILL $TIMEOUT  {{ ansible_user_dir }}/rdoinfo-DLRN.sh wallaby "${PACKAGES_UPDATED_WALLABY}" "${CENTOS_VERS}"
               ret1=$?
               if [ $ret1 -ne 0 ]; then
                   ret=$ret1
