--- a/playbooks/run-rdoinfo.yaml
+++ b/playbooks/run-rdoinfo.yaml
@@ -1,7 +1,7 @@
 ---
 - hosts: primary
   vars:
-    master_release: wallaby
+    master_release: xena
   tasks:
     - name: Run pre-quickstart role
       import_role:
