--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -132,7 +132,7 @@
     parent: DLRN-rpmbuild
     voting: false
     vars:
-      tag: 'wallaby-uc'
+      tag: 'xena-uc'
 
 - job:
     name: DLRN-rpmbuild-rpm-packaging-centos
@@ -166,7 +166,7 @@
     name: DLRN-rpmbuild-centos8-pinned
     parent: DLRN-rpmbuild-centos8
     vars:
-      tag: 'wallaby-uc'
+      tag: 'xena-uc'
       centos_version: 'centos8'
 
 - job:
