--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -1083,6 +1083,47 @@
     vars:
       component: security
 
+### wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-baremetal-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: baremetal
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-clients-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: clients
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-network-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: network
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-security-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-security-master
+    vars:
+      component: security
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-tripleo-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-component-master
+    vars:
+      component: tripleo
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ### victoria
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-baremetal-victoria
@@ -1265,6 +1306,49 @@
     parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-component-master
     vars:
       component: tripleo
+
+### wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-clients-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-clients-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-network-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-network-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-octavia-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-octavia-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-security-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-security-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-tripleo-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-tripleo-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
 
 ### victoria
 - job:
