[WIP] Use CloudSIG repos to gate promotions to wallaby-testing
RC builds are ready to move weirdo jobs to use cloudsig when gating
promotions to wallaby-testing tag.

Temporary changing release rpm url as not able to write
rpm in repos.fedorapeople.org.

Change-Id: I6b97e067dfa88d295c773d19b5c8198034e8a8d3

--- a/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
+++ b/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
@@ -94,7 +94,7 @@
         cmd: |
           set -e -x
 
-          MASTER="wallaby"
+          MASTER="xena"
           RELEASE="{{ rdoinfo_release }}"
           PHASE="{{ rdoinfo_phase }}"
           PROJECT="{{ zuul.project.name }}"
@@ -160,7 +160,7 @@
                   ADDITIONAL_OPTS=""
               else
                   REPOS_URL="{% if not periodic_job|default(false) %}$TEMP_REPO_URL{% endif %}"
-                  ADDITIONAL_OPTS="-e stable_repositories=https://rdoproject.org/repos/openstack-${RELEASE}/${RELEASE_RPM} -e testing_repository=true"
+                  ADDITIONAL_OPTS="-e stable_repositories=https://ykarel.fedorapeople.org/${RELEASE_RPM} -e testing_repository=true"
               fi
 
           ;;
@@ -170,7 +170,7 @@
                   ADDITIONAL_OPTS=""
               else
                   REPOS_URL="$TEMP_REPO_URL"
-                  ADDITIONAL_OPTS="-e stable_repositories=https://rdoproject.org/repos/openstack-${RELEASE}/${RELEASE_RPM} -e testing_repository=false"
+                  ADDITIONAL_OPTS="-e stable_repositories=https://ykarel.fedorapeople.org/${RELEASE_RPM} -e testing_repository=false"
               fi
           ;;
           esac
