Switch back to rdoproject.repos for wallaby release rpm
[1] is fixed now and wallaby release rpm is now available,
so switch back to original url.

[1] https://pagure.io/fedora-infrastructure/issue/9843

Change-Id: I95ef6dbaec0281c4e43a45cc7ebd8723b66a61fc

--- a/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
+++ b/playbooks/rdoinfo/weirdo-buildsys-tags.yaml
@@ -153,11 +153,6 @@
           localhost log_destination=/var/log/weirdo
           EOF
 
-          # FIXME(ykarel) once https://pagure.io/fedora-infrastructure/issue/9843 is fixed
-          RELEASE_BASE="https://rdoproject.org/repos/openstack-${RELEASE}"
-          if [ $RELEASE = "wallaby" ]; then
-              RELEASE_BASE="https://ykarel.fedorapeople.org"
-          fi
           case $PHASE in
           testing)
               if [ $RELEASE = $MASTER ]; then
@@ -165,7 +160,7 @@
                   ADDITIONAL_OPTS=""
               else
                   REPOS_URL="{% if not periodic_job|default(false) %}$TEMP_REPO_URL{% endif %}"
-                  ADDITIONAL_OPTS="-e stable_repositories=${RELEASE_BASE}/${RELEASE_RPM} -e testing_repository=true"
+                  ADDITIONAL_OPTS="-e stable_repositories=https://rdoproject.org/repos/openstack-${RELEASE}/${RELEASE_RPM} -e testing_repository=true"
               fi
 
           ;;
@@ -175,7 +170,7 @@
                   ADDITIONAL_OPTS=""
               else
                   REPOS_URL="$TEMP_REPO_URL"
-                  ADDITIONAL_OPTS="-e stable_repositories=${RELEASE_BASE}/${RELEASE_RPM} -e testing_repository=false"
+                  ADDITIONAL_OPTS="-e stable_repositories=https://rdoproject.org/repos/openstack-${RELEASE}/${RELEASE_RPM} -e testing_repository=false"
               fi
           ;;
           esac
