--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -488,6 +488,13 @@
         - validate-buildsys-tags-wallaby-testing-packstack-scenario001-centos8
         - validate-buildsys-tags-wallaby-testing-packstack-scenario002-centos8
         - validate-buildsys-tags-wallaby-testing-packstack-scenario003-centos8
+        - validate-buildsys-tags-wallaby-release-puppet-scenario001-centos8
+        - validate-buildsys-tags-wallaby-release-puppet-scenario002-centos8
+        - validate-buildsys-tags-wallaby-release-puppet-scenario003-centos8
+        - validate-buildsys-tags-wallaby-release-puppet-scenario004-centos8
+        - validate-buildsys-tags-wallaby-release-packstack-scenario001-centos8
+        - validate-buildsys-tags-wallaby-release-packstack-scenario002-centos8
+        - validate-buildsys-tags-wallaby-release-packstack-scenario003-centos8
 
 - project-template:
     name: periodic-centos-stream
