--- a/zuul.d/weirdo-jobs.yaml
+++ b/zuul.d/weirdo-jobs.yaml
@@ -1123,6 +1123,59 @@
       scenario: scenario003
 
 - job:
+    name: validate-buildsys-tags-wallaby-release-centos8-base
+    parent: weirdo-validate-buildsys-tags-base
+    vars:
+      rdoinfo_release: wallaby
+      rdoinfo_phase: release
+      centos_releasever: 8s
+    nodeset: rdo-centos-8-stream
+    files:
+      - ^buildsys-tags/cloud8s-openstack-wallaby-release.yml$
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-puppet-scenario001-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario001
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-puppet-scenario002-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario002
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-puppet-scenario003-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario003
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-puppet-scenario004-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario004
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-packstack-scenario001-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario001
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-packstack-scenario002-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario002
+
+- job:
+    name: validate-buildsys-tags-wallaby-release-packstack-scenario003-centos8
+    parent: validate-buildsys-tags-wallaby-release-centos8-base
+    vars:
+      scenario: scenario003
+
+- job:
     name: weirdo-periodic-base
     parent: base
     run: playbooks/rdoinfo/weirdo-periodic.yaml
