Remove rocky related jobs after rocky End of Life
Rocky is now EOL since [1][2] so It leads to remove
of rocky based jobs or conditionals.
Remove-val of job definations will be done in the follow up
patches.

Related reviews in topic branch tripleo-ci-reduce-rocky [3].

Depends-On: https://review.rdoproject.org/r/c/config/+/33120
[1] https://review.opendev.org/c/openstack/releases/+/774244
[2] http://lists.openstack.org/pipermail/openstack-discuss/2021-March/020912.html
[3] https://review.rdoproject.org/r/q/topic:tripleo-ci-reduce-rocky

Change-Id: I7ac47f43f7dc304a3990f13d9a743e455750ffb2

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -99,14 +99,14 @@
 - job:
     name: DLRN-build-tripleo
     parent: DLRN-build-tripleo-base
-    branches: ^(queens-rdo)|(rocky-rdo)|(stein-rdo)|(train-rdo)$
+    branches: ^(queens-rdo)|(stein-rdo)|(train-rdo)$
     dependencies:
       - DLRN-rpmbuild
 
 - job:
     name: DLRN-build-tripleo-centos8
     parent: DLRN-build-tripleo-base
-    branches: ^((rpm-master)|(^(?!queens|rocky|stein)(\w+)-rdo))$
+    branches: ^((rpm-master)|(^(?!queens|stein)(\w+)-rdo))$
     dependencies:
       - DLRN-rpmbuild-centos8
     vars:
@@ -125,7 +125,7 @@
 - job:
     name: DLRN-rpmbuild
     parent: DLRN-rpmbuild-base
-    branches: ^(queens-rdo)|(rocky-rdo)|(stein-rdo)|(train-rdo)$
+    branches: ^(queens-rdo)|(stein-rdo)|(train-rdo)$
 
 - job:
     name: DLRN-rpmbuild-pinned
@@ -157,7 +157,7 @@
 - job:
     name: DLRN-rpmbuild-centos8
     parent: DLRN-rpmbuild-base
-    branches: ^((rpm-master)|(^(?!queens|rocky|stein)(\w+)-rdo))$
+    branches: ^((rpm-master)|(^(?!queens|stein)(\w+)-rdo))$
     vars:
       centos_version: 'centos8'
     nodeset: rdo-centos-8-stream
