[DNM] test update buildsys c8-stream
Change-Id: I0c8b5fcd99b574c4fe221263726a7f5d4ce8f29e

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,17 @@
+- job:
+    name: update-buildsys-tags-test
+    parent: distgit-cbs-validate
+    description: |
+      This job tags builds in CBS as per rdoinfo changes
+    run: playbooks/update-buildsys-tags.yaml
+    timeout: 10800
+    nodeset: rdo-centos-8-stream
+    required-projects:
+      - name: gating_scripts
+      - name: graffiti
+      - name: rdoinfo
+
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - update-buildsys-tags-test
