Remove rocky multinode, ovb and undercloud jobs
Rocky is now EOL since [1][2] so It leads to remove
of rocky multinode, ovb and undercloud jobs definations.

Related reviews in topic branch tripleo-ci-reduce-rocky [3].

[1] https://review.opendev.org/c/openstack/releases/+/774244
[2] http://lists.openstack.org/pipermail/openstack-discuss/2021-March/020912.html
[3] https://review.rdoproject.org/r/q/topic:tripleo-ci-reduce-rocky

Change-Id: Ic07232c8653c831b11dadef5b71a046e614eb554

--- a/playbooks/octavia-build-amphora/run.yaml
+++ b/playbooks/octavia-build-amphora/run.yaml
@@ -34,7 +34,7 @@
           # images are built using the centos-minimal DIB element. This element
           # builds the base system in a chroot, whereas the centos DIB element
           # used in previous releases uses a pre-existing qcow image.
-          if [[ "$RELEASE" =~ (queens|rocky|stein) ]]; then
+          if [[ "$RELEASE" =~ (queens|stein) ]]; then
             export IMAGE_NAME=CentOS-7-x86_64-GenericCloud.qcow2
             wget https://cloud.centos.org/centos/7/images/$IMAGE_NAME
             sudo systemctl start libvirtd
